<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:id="@+id/ll_container">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logoImagen"
        android:src="@drawable/logo"
        android:paddingTop="40dp"
        android:paddingBottom="10dp"
        android:contentDescription="@string/logo" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/oneplayer"
        android:id="@+id/oneplayer"

        android:layout_gravity="center"
        android:background="#000000"
        android:textColor="#04f91c" />

    <Button
        android:id="@+id/twoplayer"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/twoplayer"
        android:layout_gravity="center"
        android:textColor="#04f91c"
        android:background="#000000" />

    <Button
        android:id="@+id/opciones"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        android:text="@string/settings"
        android:layout_gravity="center"
        android:background="#000000"
        android:textColor="#04f91c" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/cambiarfondo"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:textColor="#04f91c"
        android:background="#000000" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/salir"
        android:id="@+id/salir"
        android:layout_gravity="center_horizontal"
        android:background="#000000"
        android:textColor="#04f91c" />

</LinearLayout>
